ui: [bugfix] Tag wrapping on detail pages (#6478)
Makes sure that tags wrap on the detail pages for service and nodes whilst making sure they don't wrap on the listing pages.

--- a/ui-v2/app/styles/components/dom-recycling-table/layout.scss
+++ b/ui-v2/app/styles/components/dom-recycling-table/layout.scss
@@ -11,3 +11,9 @@
   /* important required as ember-collection will inline an overflow: visible*/
   overflow-x: hidden !important;
 }
+%dom-recycling-table dd {
+  flex-wrap: nowrap;
+}
+%dom-recycling-table dd > * {
+  margin-bottom: 0;
+}
